<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2022 Nanit
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Повітряна тривога UA</string>
    <string name="lang_key">uk</string>
    <string name="lang_name">Українська</string>

    <!--  Actions  -->
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_yes">Так</string>
    <string name="action_no">Ні</string>
    <string name="notification_btn_mute">Вимкнути сингал</string>

    <!--  Statuses  -->
    <string name="status_ok_title">Поки все добре</string>
    <string name="status_ok_subtitle">Слідкуйте за подальшими повідомленнями</string>
    <string name="status_alarmed_title">Увага! Тривога!</string>
    <string name="status_alarmed_subtitle">Прямуйте до найближчого укриття!</string>

    <!--  Regions activity  -->
    <string name="regions_title_state">Обрати область</string>
    <string name="regions_title_district">Обрати район</string>
    <string name="regions_select_state">Обрати всю область</string>
    <string name="regions_dialog_title">Ви впевнені?</string>
    <string name="regions_dialog_content">Ви вибрали всю область. Ви будете отримувати сповіщеня від всіх районів цієї області</string>

    <!--  Main activity  -->
    <string name="main_no_network">Пыдключення до мережі відсутнє!</string>
    <string name="main_unsubscribe">Обрати інший регіон</string>
    <string name="main_shutdown">Вимкнути сервіс</string>
    <string name="main_stopped">Мониторінг тривоги вимкнено</string>
    <string name="main_settings">Налаштування</string>
    <string name="main_dialog_title">Важливо!</string>
    <string name="main_dialog_content">
        Девайс вашого типу виключає сервіс повідомлень додатку після його закриття.
        Перевірте, чи дозволено додатку працювати у фоні.
        Коли додаток працює, ви будете бачити повідомлення про це
    </string>

    <!--  Settings activity  -->
    <string name="settings_title">Налаштування</string>
    <string name="settings_language">Мова</string>
    <string name="settings_language_reload">Мова буде змінена тільки після перезапуску додатку</string>
    <string name="settings_vibration_title">Вібрація</string>
    <string name="settings_vibration_summary">Вібрація допоможе вам помітити сигнал тривоги</string>
    <string name="settings_volume_title">Гучність сигналу</string>
    <string name="settings_volume_summary">Гучність сигналів тривоги та відбою</string>
    <string name="settings_ringtone_alarm">Рингтон тривоги</string>
    <string name="settings_ringtone_all_clear">Рингтон відбою</string>
    <string name="settings_ringtone_default">За замовченням</string>
    <string name="settings_licenses">Ліцензії відкритого ПО</string>

    <!--  Copyright notes  -->
    <string name="license_sounds" translatable="false">Some sound effects obtained from https://www.zapsplat.com</string>
</resources>